src/styles/globals.css
/* ... */
.verif_banner {
  position: relative;
  max-width: 530px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.verif_banner .banner {
  width: 100%;
}

.verif_banner .icon {
  position: absolute;
  height: 130px;
}

.verif_social {
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  gap: 1rem;
  max-width: 750px;
}

.verif_social a {
  width: fit-content;
  color: #272727;
  font-size: 18px;
  line-height: 1.3;
  text-decoration: none;
  display: flex;
  align-items: center;
  gap: 10px;
}

.verif_head {
  font-size: 40px;
  font-weight: 600;
  text-align: center;
}

.note {
  padding: 1.5rem;
  background: #2727271e;
  border-radius: 20px;
  font-size: 22px;
  font-weight: 500;
  text-align: center;
}

.verif_social.social_login a {
  padding: 12px 2.5rem;
}

.verif_social.social_login a img {
  height: 45px;
}

/* footer css  */
.footer_row {
  display: flex;
  align-items: center;
  gap: 2rem;
}

.pop_change {
  display: flex;
  align-items: center;
  background: transparent;
  border: none;
  outline: none;
}

.footer_social {
  display: flex;
  align-items: center;
  gap: 12px;
  margin: 0;
  padding: 0;
}

.last_line {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.newletter_form {
  border: 1px solid #00000056;
  border-radius: 50px;
  width: 100%;
  max-width: 500px;
  display: flex;
  align-items: center;
  margin-top: 1rem;
}

.newletter_form input {
  background: transparent;
  border: none;
  outline: none;
  padding: 0 0 0 1rem;
  width: calc(100% - 6rem);
}

.newletter_form button {
  background: linear-gradient(#a180e9, #5b4883);
  border: none;
  border-radius: 50px;
  padding: 1rem 2rem;
  font-size: 15px;
  color: #fff;
}

.new_letter_area {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100%;
  gap: 1.5rem;
  padding: 5rem 0;
}

.new_letter_area h2 {
  font-size: 40px;
  font-weight: 600;
  margin: 0;
  text-align: center;
}

.new_letter_area img {
  height: 100px;
}

.footer_main {
  background: transparent !important;
  position: relative;
}

.footer_main:before {
  content: "";
  display: block;
  background: url("../../public/images/bg-path.webp");
  background-position: center;
  background-size: contain;
  width: 100%;
  height: 100%;
  position: absolute;
  background-repeat: no-repeat;
  z-index: -1;
}

/* header css  */
.Header_u {
  display: flex;
  justify-content: space-between;
  padding: 1.5rem 5rem;
  position: fixed;
  transition: 0.5s ease;
  top: 0;
  backdrop-filter: blur(5px);
  width: 100%;
  z-index: 15;
  border-bottom: 1px solid #ffffff8a;
}

.header_logo {
  display: block;
}

.header_logo > img {
  height: 35px;
}

.nav_lnks {
  display: flex;
  align-items: center;
  gap: 40px;
  margin: 0;
  padding: 0;
}

.nav_lnks a {
  color: #000;
  font-size: 16px;
  font-weight: 500;
}

.login_row {
  display: flex;
  align-items: center;
  gap: 1rem;
}

/* main css  */
.main_section {
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  min-height: 570px;
  padding-top: 80px;
}

.search_where.active {
  visibility: visible !important;
  opacity: 1 !important;
  pointer-events: inherit !important;
}

.cd56ld {
  position: relative;
  z-index: 2;
}

.fix_row {
  display: flex;
  align-items: center;
  gap: 14px;
  padding: 0 1rem !important;
}

.top_fade {
  width: 100%;
  overflow: hidden;
}

.top_fade::before {
  content: "";
  display: block;
  width: 100%;
  height: 100%;
  background: radial-gradient(#d8062251, 20%, #a180e929, #ffffff00, #ffffff00);
  position: absolute;
  z-index: -1;
  top: -12rem;
}

.top_fade img {
  width: 100%;
  height: 100%;
  max-height: 50vh;
  object-fit: contain;
  /* margin-top: 2rem; */
  position: absolute;
  bottom: 10rem;
}

.main_cont {
  position: relative;
  width: 100%;
  z-index: 2;
}

.head_wel {
  font-size: 20px;
  font-weight: bold;
  line-height: 1;
  color: #6e0311;
  text-align: center;
  display: block;
}

.para {
  font-size: 16px;
  font-weight: 500;
  line-height: 1.5;
  color: #000;
  text-align: center;
  display: block;
  margin-top: 10px;
}

.change_text {
  display: flex;
  flex-direction: column;
  margin-left: 1rem !important;
  color: #000;
}

.mainp {
  display: flex;
  align-items: center;
}

.mainp p {
  background: #d80621;
  background: linear-gradient(81deg, #d80621 0%, #000 62%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  margin: 0;
  padding: 0;
}

.Mainheading {
  font-size: 80px;
  font-weight: bold;
  margin: 0;
  padding: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  max-width: 1920px;
  overflow: hidden;
  margin-top: 1.5rem;
}

.Mainheading img {
  height: 60px;
}

.word {
  opacity: 0;
  transition: opacity 0.3s ease-in-out;
  position: absolute;
}

.visible {
  opacity: 1;
  position: relative;
}

.store_area {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 20px;
  margin-top: 3.5rem;
}

.store_area img {
  height: 50px;
}

.search_btns {
  display: flex;
  align-items: center;
  gap: 6px;
  margin: 0;
  padding: 0 8px;
}

.search_button {
  background: linear-gradient(#191919, #2b2b2b);
  border-radius: 50px;
  border: none;
  outline: none;
  display: flex;
  align-items: center;
  gap: 1rem;
  padding: 14px 1.4rem;
  width: fit-content;
  color: #fff;
  font-size: 16px;
  justify-content: center;
}

.search_button img {
  height: 22px;
}

.search_with_ai {
  background: linear-gradient(#a180e9, #9c6991);
  border-radius: 100%;
  border: none;
  outline: none;
  display: flex;
  align-items: center;
  justify-content: center;
  min-width: 50px;
  height: 50px;
}

.search_with_ai > img {
  height: 26px;
}

#search-tabpanel {
  padding: 8px;
}

/* section two css  */
.section-two {
  padding: 2rem 5rem;
}
/* ... */

